<https://webkit.org/b/000000> Reviewed by NOBODY (OOPS!). Fixes the following warning with newer clang: Source/JavaScriptCore/API/JSMarkingConstraintPrivate.cpp:78:11: error: lambda capture 'vm' is not used [-Werror,-Wunused-lambda-capture] [&vm, constraintCallback, userData] ^ * API/JSMarkingConstraintPrivate.cpp: (JSContextGroupAddMarkingConstraint): Remove unused lambda capture for '&vm'. --- 2 files changed, 18 insertions(+), 4 deletions(-)
Created attachment 310060 [details] Patch
Comment on attachment 310060 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=310060&action=review > Source/JavaScriptCore/API/JSMarkingConstraintPrivate.cpp:78 > - [&vm, constraintCallback, userData] > + [constraintCallback, userData] I'm not sure whether this is some magic to make GC work, so if the &vm lambda needs to stay, we can use UNUSED_PARAM(&vm) in the body to silence the warning.
Comment on attachment 310060 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=310060&action=review >> Source/JavaScriptCore/API/JSMarkingConstraintPrivate.cpp:78 >> + [constraintCallback, userData] > > I'm not sure whether this is some magic to make GC work, so if the &vm lambda needs to stay, we can use UNUSED_PARAM(&vm) in the body to silence the warning. Doesn't seem like it to me.
Comment on attachment 310060 [details] Patch Clearing flags on attachment: 310060 Committed r216837: <http://trac.webkit.org/changeset/216837>
All reviewed patches have been landed. Closing bug.