Unused lambda capture in JSContextGroupAddMarkingConstraint() <https://webkit.org/b/172084>

Reviewed by Saam Barati.

Fixes the following warning with newer clang:

    Source/JavaScriptCore/API/JSMarkingConstraintPrivate.cpp:78:11: error: lambda capture 'vm' is not used [-Werror,-Wunused-lambda-capture]
            [&vm, constraintCallback, userData]
              ^

* API/JSMarkingConstraintPrivate.cpp:
(JSContextGroupAddMarkingConstraint): Remove unused lambda
capture for '&vm'.


Canonical link: https://commits.webkit.org/189022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216837 268f45cc-cd09-0410-ab3c-d52691b4dbfc